# AI-Lab

./: .gitignore  CMakeLists.txt  README.md
Lab01/: 8 tile problem BFS.cpp  8 tile problem DFS.cpp  Readme.md
Lab02/: Best First Search.cpp  Jugs.cpp  MagicSqaure.cpp  README.md  Tic Tac Toe.cpp
Lab03/: A-Star.cpp  README.md
Lab04/: README.md  TicTacToeMinMax.cpp
Lab05/: README.md  TicTacToeAlphaBeta.cpp
Lab06/: Blockword.md  blockworldpl.md
Lab07/: README.md  condition.lisp  first.lisp  second.lisp
Lab08/: Chess.md  MagicSquare.md  magicsquareeven.cpp
